# g16-mlips

./: .gitignore  CITATION.cff  LICENSE  OPTIONS.md  README.md  SOLVENT_EFFECTS.md  TECHNICAL_NOTE.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: release.yml
examples/: cla_aimnet2.gjf  cla_external.gjf  cla_freq.gjf  cla_freq_aimnet2.gjf  cla_freq_solv_uma.gjf  cla_solv_uma.gjf  cla_uma.gjf  sn2_external.gjf  sn2_freq.gjf  water_external.gjf  water_freq.gjf  water_freq_mace.gjf  water_mace.gjf
plugins/: __init__.py  aimnet2_g16.py  cli_g16.py  g16_extio.py  mace_g16.py  mlip_backends.py  mlip_server.py  orbmol_g16.py  runner_g16.py  uma_g16.py  xtb_alpb_correction.py
